TinyUSDGen/TinyUSDGen/Headers/c-tinyusd.h

typedef enum {
  C_TINYUSD_FORMAT_UNKNOWN,
  C_TINYUSD_FORMAT_AUTO,  // auto detect based on file extension.
  C_TINYUSD_FORMAT_USDA,
  C_TINYUSD_FORMAT_USDC,
  C_TINYUSD_FORMAT_USDZ
} CTinyUSDFormat;
/* opaque pointer to `std::string`.*/
typedef struct c_tinyusd_string_t c_tinyusd_string_t;
C_TINYUSD_EXPORT c_tinyusd_string_t *c_tinyusd_string_new(const char *str);
C_TINYUSD_EXPORT int c_tinyusd_string_free(c_tinyusd_string_t *s);
/*   TODO: List up other types... */

/* opaque pointer to tinyusdz::Path */
typedef struct CTinyUSDPath CTinyUSDPath;
typedef struct CTinyUSDPrim CTinyUSDPrim;
C_TINYUSD_EXPORT int c_tinyusd_prim_free(CTinyUSDPrim *prim);
/*
   Append Prim to `prim`'s children. child Prim object is moved(in C++ meaning).
   So no need to free child Prim(and `child` pointer is invalid after calling
   this function. Usefull if a Prim is a large object(e.g. GeomMesh with 100M
   vertices)
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_append_child_move(CTinyUSDPrim *prim,
                                                      CTinyUSDPrim *child);
/*
   Delete child at `child_index` position from a Prim.
   Return 0 when `child_index` is out-of-range.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_del_child(CTinyUSDPrim *prim,
                                              uint64_t child_index);
/*
   Return the number of child Prims in this Prim.

   Return 0 when `prim` is invalid or nullptr.
*/
C_TINYUSD_EXPORT uint64_t c_tinyusd_prim_num_children(const CTinyUSDPrim *prim);
/*
   Get a child Prim of specified child_index.

   Child's conent is just a pointer, so please do not call Prim
   deleter(`c_tinyusd_prim_free`) to it. (Please use `c_tinyusd_prim_del_child`
   if you want to remove a child Prim)

   Also the content(pointer) is valid unless the `prim`'s children is
   preserved(i.e., child is not deleted/added)

   Return 0 when `child_index` is out-of-range.
*/
C_TINYUSD_EXPORT int c_tinyusd_prim_get_child(const CTinyUSDPrim *prim,
                                              uint64_t child_index,
                                              const CTinyUSDPrim **child_prim);
/* opaque pointer to tinyusd::Stage */
typedef struct CTinyUSDStage CTinyUSDStage;
C_TINYUSD_EXPORT CTinyUSDStage *c_tinyusd_stage_new();
C_TINYUSD_EXPORT int c_tinyusd_stage_to_string(const CTinyUSDStage *stage,
                                               c_tinyusd_string_t *str);
C_TINYUSD_EXPORT int c_tinyusd_stage_free(CTinyUSDStage *stage);
/*
   Callback function for Stage's root Prim traversal.
   Return 1 for success, Return 0 to stop traversal futher.
 */
typedef int (*CTinyUSDTraversalFunction)(const CTinyUSDPrim *prim,
                                         const CTinyUSDPath *path);
/*
   Traverse root Prims in the Stage and invoke callback function for each Prim.

   @param[in] stage Stage.
   @param[in] callbacl_fun Callback function.
   @param[out] err Optional. error message.

   @return 1 upon success. 0 when failed(and `err` will be set).

   When providing `err`, it must be created with `c_tinyusd_string_new` before
   calling this `c_tinyusd_stage_traverse` function, and an App must free it by
   calling `c_tinyusd_string_free` after using it.
 */
C_TINYUSD_EXPORT int c_tinyusd_stage_traverse(
    const CTinyUSDStage *stage, CTinyUSDTraversalFunction callback_fun,
    c_tinyusd_string_t *err);
/*
   Detect file format of input file.
 */
CTinyUSDFormat c_tinyusd_detect_format(const char *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usd_file(const char *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usda_file(const char *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usdc_file(const char *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usdz_file(const char *filename);
/*
 * wide char version. especially for Windows UTF-16 filename.
 */
CTinyUSDFormat c_tinyusd_detect_format_w(const wchar_t *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usd_file_w(const wchar_t *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usda_file_w(const wchar_t *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usdc_file_w(const wchar_t *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usdz_file_w(const wchar_t *filename);
C_TINYUSD_EXPORT int c_tinyusd_is_usd_memory(const uint8_t *addr,
                                             const size_t nbytes);
C_TINYUSD_EXPORT int c_tinyusd_is_usda_memory(const uint8_t *addr,
                                              const size_t nbytes);
C_TINYUSD_EXPORT int c_tinyusd_is_usdc_memory(const uint8_t *addr,
                                              const size_t nbytes);
C_TINYUSD_EXPORT int c_tinyusd_is_usdz_memory(const uint8_t *addr,
                                              const size_t nbytes);
/*
 * Return 1 upon success. 0 when failed.
 */
C_TINYUSD_EXPORT int c_tinyusd_load_usd_from_file(const char *filename,
                                                  CTinyUSDStage *stage,
                                                  c_tinyusd_string_t *warn,
                                                  c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usda_from_file(const char *filename,
                                                   CTinyUSDStage *stage,
                                                   c_tinyusd_string_t *warn,
                                                   c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usdc_from_file(const char *filename,
                                                   CTinyUSDStage *stage,
                                                   c_tinyusd_string_t *warn,
                                                   c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usdz_from_file(const char *filename,
                                                   CTinyUSDStage *stage,
                                                   c_tinyusd_string_t *warn,
                                                   c_tinyusd_string_t *err);
/*
 * wide char version. especially for Windows UTF-16 filename.
 */
C_TINYUSD_EXPORT int c_tinyusd_load_usd_from_file_w(const wchar_t *filename,
                                                    CTinyUSDStage *stage,
                                                    c_tinyusd_string_t *warn,
                                                    c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usda_from_file_w(const wchar_t *filename,
                                                     CTinyUSDStage *stage,
                                                     c_tinyusd_string_t *warn,
                                                     c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usdc_from_file_w(const wchar_t *filename,
                                                     CTinyUSDStage *stage,
                                                     c_tinyusd_string_t *warn,
                                                     c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usdz_from_file_w(const wchar_t *filename,
                                                     CTinyUSDStage *stage,
                                                     c_tinyusd_string_t *warn,
                                                     c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usd_from_memory(const uint8_t *addr,
                                                    const size_t nbytes,
                                                    c_tinyusd_string_t *warn,
                                                    c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usda_from_memory(const uint8_t *addr,
                                                     const size_t nbytes,
                                                     c_tinyusd_string_t *warn,
                                                     c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usdc_from_memory(const uint8_t *addr,
                                                     const size_t nbytes,
                                                     c_tinyusd_string_t *warn,
                                                     c_tinyusd_string_t *err);
C_TINYUSD_EXPORT int c_tinyusd_load_usdz_from_memory(const uint8_t *addr,
                                                     const size_t nbytes,
                                                     c_tinyusd_string_t *warn,
                                                     c_tinyusd_string_t *err);