TinyUSDGen/Evergine.Bindings.TinyUSD/Generated/Funtions.cs


		/// <summary>
		/// Append Prim to `prim`'s children. child Prim object is moved(in C++ meaning).
		/// So no need to free child Prim(and `child` pointer is invalid after calling
		/// this function. Usefull if a Prim is a large object(e.g. GeomMesh with 100M
		/// vertices)
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_append_child_move(IntPtr prim, IntPtr child);

		/// <summary>
		/// Delete child at `child_index` position from a Prim.
		/// Return 0 when `child_index` is out-of-range.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_del_child(IntPtr prim, ulong child_index);

		/// <summary>
		/// Return the number of child Prims in this Prim.
		/// Return 0 when `prim` is invalid or nullptr.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern ulong c_tinyusd_prim_num_children(IntPtr prim);

		/// <summary>
		/// Get a child Prim of specified child_index.
		/// Child's conent is just a pointer, so please do not call Prim
		/// deleter(`c_tinyusd_prim_free`) to it. (Please use `c_tinyusd_prim_del_child`
		/// if you want to remove a child Prim)
		/// Also the content(pointer) is valid unless the `prim`'s children is
		/// preserved(i.e., child is not deleted/added)
		/// Return 0 when `child_index` is out-of-range.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_get_child(IntPtr prim, ulong child_index, IntPtr child_prim);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_stage_new();

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_stage_to_string(IntPtr stage, IntPtr str);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_stage_free(IntPtr stage);

		/// <summary>
		/// Traverse root Prims in the Stage and invoke callback function for each Prim.
		/// 
		/// 
		/// When providing `err`, it must be created with `c_tinyusd_string_new` before
		/// calling this `c_tinyusd_stage_traverse` function, and an App must free it by
		/// calling `c_tinyusd_string_free` after using it.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_stage_traverse(IntPtr stage, CTinyUSDTraversalFunction callback_fun, IntPtr err);

		/// <summary>
		/// Detect file format of input file.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern CTinyUSDFormat c_tinyusd_detect_format([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usd_file([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usda_file([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usdc_file([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usdz_file([MarshalAs(UnmanagedType.LPStr)] string filename);

		/// <summary>
		/// wide char version. especially for Windows UTF-16 filename.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern CTinyUSDFormat c_tinyusd_detect_format_w([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usd_file_w([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usda_file_w([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usdc_file_w([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usdz_file_w([MarshalAs(UnmanagedType.LPStr)] string filename);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usd_memory(byte* addr, UIntPtr nbytes);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usda_memory(byte* addr, UIntPtr nbytes);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usdc_memory(byte* addr, UIntPtr nbytes);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_is_usdz_memory(byte* addr, UIntPtr nbytes);

		/// <summary>
		/// Return 1 upon success. 0 when failed.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usd_from_file([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usda_from_file([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usdc_from_file([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usdz_from_file([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		/// <summary>
		/// wide char version. especially for Windows UTF-16 filename.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usd_from_file_w([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usda_from_file_w([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usdc_from_file_w([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usdz_from_file_w([MarshalAs(UnmanagedType.LPStr)] string filename, IntPtr stage, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usd_from_memory(byte* addr, UIntPtr nbytes, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usda_from_memory(byte* addr, UIntPtr nbytes, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usdc_from_memory(byte* addr, UIntPtr nbytes, IntPtr warn, IntPtr err);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_load_usdz_from_memory(byte* addr, UIntPtr nbytes, IntPtr warn, IntPtr err);

	}
}
